# python-namedpipe

./: .gitignore  CHANGELOG.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: test_n_pub.yml
src/namedpipe/: __init__.py  _posix.py  _win32.py
tests/: _test_ffmpeg.py  _test_ffmpeg_linux.py  _test_ffmpeg_read.py  _test_win32.py  test_mp.py  test_read.py  test_write.py
