[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "namedpipe"
description = "Cross-platform named pipe manager"
readme = "README.md"
keywords = ["utility"]
license = { text = "GPL-2.0 License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["pywin32;platform_system=='Windows'"]

[project.urls]
Repository = "https://github.com/python-ffmpegio/python-namedpipe"
Issues = "https://github.com/python-ffmpegio/python-namedpipe/issues"
Pull_Requests = "https://github.com/python-ffmpegio/python-namedpipe/pulls"

[tool.setuptools.dynamic]
version = { attr = "namedpipe.__version__" }
